5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1635_1053.log
== TEST (2019-04-07 21:10:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do animal: ")

if patronum = cervo:
	print("cervo eh patrono do Harry Porter")
else:
	print(patronum, "nao eh patrono do Harry Porter")
-- ERROR:
File "XXXX", line 7
    if patronum = cervo:
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:10:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do animal: ")

if patronum == cervo:
	print("cervo eh patrono do Harry Porter")
else:
	print(patronum, "nao eh patrono do Harry Porter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if patronum == cervo:
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:10:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do animal: ")

if patronum == "cervo" :
	print("cervo eh patrono do Harry Porter")
else:
	print(patronum, "nao eh patrono do Harry Porter")
-- OUTPUT:
cervo eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 21:11:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do animal: ")

if patronum == "cervo" :
	print("cervo eh patrono do Harry Porter")
else:
	print(patronum, "nao eh patrono do Harry Porter")
-- EXECUTION TIME:
0.138903
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Porter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:11:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do animal: ")

if patronum == "cervo" :
	print("cervo eh patrono do Harry Porter")
else:
	print( "<input>nao eh patrono do Harry Porter")
-- OUTPUT:
cervo eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:11:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do animal: ")

if patronum == "cervo" :
	print("cervo eh patrono do Harry Porter")
else:
	print( "patronum nao eh patrono do Harry Porter")
-- OUTPUT:
cervo eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:12:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do animal: ")

if patronum == "cervo" :
	print("cervo eh patrono do Harry Porter")
else:
	print( "nao eh patrono do Harry Porter")
-- OUTPUT:
cervo eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 21:12:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do animal: ")

if patronum == "cervo" :
	print("cervo eh patrono do Harry Porter")
else:
	print( "nao eh patrono do Harry Porter")
-- EXECUTION TIME:
0.229093
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Porter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:13:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do animal: ")

if patronum == "cervo" :
	print("cervo eh patrono do Harry Porter")
else:
	print(<y> "nao eh patrono do Harry Porter")
-- ERROR:
File "XXXX", line 10
    print(<y> "nao eh patrono do Harry Porter")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:13:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do animal: ")

if patronum == "cervo" :
	print("cervo eh patrono do Harry Porter")
else:
	print(patronum, "nao eh patrono do Harry Porter")
-- OUTPUT:
cervo eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:13:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do animal: ")

if patronum == "cervo" :
	print("cervo eh patrono do Harry Porter")
else:
	print(patronum,"nao eh patrono do Harry Porter")
-- OUTPUT:
cervo eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 21:13:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do animal: ")

if patronum == "cervo" :
	print("cervo eh patrono do Harry Porter")
else:
	print(patronum,"nao eh patrono do Harry Porter")
-- EXECUTION TIME:
0.175133
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Porter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:14:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do animal: ")

if patronum == "cervo" :
	print("cervo eh patrono do Harry Porter")
else:
	print(patronum,"nao eh patrono do Harry Porter")
-- OUTPUT:
cervo eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:15:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do animal: ")

if patronum == "cervo" :
	print("cervo eh patrono do Harry Porter")
else:
	print(input("nome do animal: "),"nao eh patrono do Harry Porter")
-- OUTPUT:
cervo eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 21:15:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do animal: ")

if patronum == "cervo" :
	print("cervo eh patrono do Harry Porter")
else:
	print(input("nome do animal: "),"nao eh patrono do Harry Porter")
-- EXECUTION TIME:
0.129499
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:16:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do animal: ")

if patronum == "cervo" :
	print("cervo eh patrono do Harry Porter")
else:
	print(patronum,"nao eh patrono do Harry Porter")
-- OUTPUT:
cervo eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:17:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do animal: ")

if patronum == "cervo" :
	print(patronum,"eh patrono do Harry Porter")
else:
	print(patronum,"nao eh patrono do Harry Porter")
-- OUTPUT:
cervo eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 21:17:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do animal: ")

if patronum == "cervo" :
	print(patronum,"eh patrono do Harry Porter")
else:
	print(patronum,"nao eh patrono do Harry Porter")
-- EXECUTION TIME:
0.136715
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Porter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 21:29:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do patrono: ")

if patronum == "cervo" :
	print(patronum,"eh patrono do Harry Porter")
else:
	print(patronum,"nao eh patrono do Harry Porter")
-- EXECUTION TIME:
0.155516
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Porter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 21:30:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do patrono: ")

if patronum == "cervo" :
	print(" (patronum) eh patrono do Harry Porter")
else:
	print(patronum,"nao eh patrono do Harry Porter")
-- EXECUTION TIME:
0.179147
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
(patronum) eh patrono do Harry Porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Porter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:30:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do patrono: ")

if patronum == "cervo" :
	print(" (patronum) eh patrono do Harry Porter")
else:
	print(patronum,"nao eh patrono do Harry Porter")
-- OUTPUT:
(patronum) eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:30:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do patrono: ")

if patronum == "cervo" :
	print("cervo eh patrono do Harry Porter")
else:
	print(patronum,"nao eh patrono do Harry Porter")
-- OUTPUT:
cervo eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:31:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do patrono: ")

print(patronum)
if patronum == "cervo" :
	print("eh patrono do Harry Porter")
else:
	print("nao eh patrono do Harry Porter")
-- OUTPUT:
cervo
eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:32:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do patrono: ")


if patronum == "cervo" :
	print("eh patrono do Harry Porter")
else:
	print(patronum) print("nao eh patrono do Harry Porter")
-- ERROR:
File "XXXX", line 11
    print(patronum) print("nao eh patrono do Harry Porter")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:32:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do patrono: ")


if patronum == "cervo" :
	print("eh patrono do Harry Porter")
else:
	print(patronum) print("nao eh patrono do Harry Porter")
-- ERROR:
File "XXXX", line 11
    print(patronum) print("nao eh patrono do Harry Porter")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:32:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do patrono: ")


if patronum == "cervo" :
	print("eh patrono do Harry Porter")
else:
	print(patronum), print("nao eh patrono do Harry Porter")
-- OUTPUT:
eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:32:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do patrono: ")

if patronum == "cervo" :
	print("eh patrono do Harry Porter")
else:
   print(patronum,"nao eh patrono do Harry Porter")
-- OUTPUT:
eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:33:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do patrono: ")

if patronum == "cervo" :
	print(patronum,"eh patrono do Harry Porter")
else:
   print(patronum,"nao eh patrono do Harry Porter")
-- OUTPUT:
cervo eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 21:34:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do patrono: ")

if (patronum == "cervo") :
	print(patronum,"eh patrono do Harry Porter")
else:
   print(patronum,"nao eh patrono do Harry Porter")
-- EXECUTION TIME:
0.222266
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Porter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:34:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	print(patronum,"eh patrono do Harry Porter")
else:
   print(patronum,"nao eh patrono do Harry Porter")
-- OUTPUT:
cervo eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 21:35:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	print("cervo eh patrono do Harry Porter")
else:
   print(patronum,"nao eh patrono do Harry Porter")
-- EXECUTION TIME:
0.138659
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nome do patrono: bode nao eh patrono do Harry Porter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 21:35:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

estrada = input("nome do patrono: ")

if (estrada == "cervo"):
	print("cervo eh patrono do Harry Porter")
else:
   print(estrada,"nao eh patrono do Harry Porter")
-- EXECUTION TIME:
0.13233
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Porter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:35:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

estrada = input("nome do patrono: ")

if (estrada == "cervo"):
	print("cervo eh patrono do Harry Porter")
else:
   print(estrada,"nao eh patrono do Harry Porter")
-- OUTPUT:
cervo eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 21:35:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

estrada = input("nome do patrono: ")

if (estrada == "cervo"):
	print("cervo eh patrono do Harry Porter")
else:
   print(estrada,"nao eh patrono do Harry Porter")
-- EXECUTION TIME:
0.14082
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Porter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:43:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

estrada = input("nome do patrono: ")

if (estrada == "cervo"):
	print("cervo eh patrono do Harry Porter")
else:
   print(estrada,"nao eh patrono do Harry Porter")
-- OUTPUT:
cervo eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:44:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

estrada = input("nome do patrono: ")

if (estrada == "cervo"):
	print("cervo eh patrono do Harry Porter")
else:
   print(<estrada>,"nao eh patrono do Harry Porter")
-- ERROR:
File "XXXX", line 10
    print(<estrada>,"nao eh patrono do Harry Porter")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:44:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

estrada = input("nome do patrono: ")

if (estrada == "cervo"):
	print("cervo eh patrono do Harry Porter")
else:
   print(<estrada>"nao eh patrono do Harry Porter")
-- ERROR:
File "XXXX", line 10
    print(<estrada>"nao eh patrono do Harry Porter")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:44:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

estrada = input("nome do patrono: ")

if (estrada == "cervo"):
	print("cervo eh patrono do Harry Porter")
else:
   print("< estrada >nao eh patrono do Harry Porter")
-- OUTPUT:
cervo eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:45:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

estrada = input("nome do patrono: ")

if (estrada == "cervo"):
	print("cervo eh patrono do Harry Porter")
else:
   print(< estrada >"nao eh patrono do Harry Porter")
-- ERROR:
File "XXXX", line 10
    print(< estrada >"nao eh patrono do Harry Porter")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:45:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

estrada = input("nome do patrono: ")

if (estrada == "cervo"):
	print("cervo eh patrono do Harry Porter")
else:
   print(<input>"nao eh patrono do Harry Porter")
-- ERROR:
File "XXXX", line 10
    print(<input>"nao eh patrono do Harry Porter")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:46:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	print("cervo eh patrono do Harry Porter")
else:
   print(patronum,"nao eh patrono do Harry Porter")
-- OUTPUT:
cervo eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 21:46:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	print("cervo eh patrono do Harry Porter")
else:
   print(patronum,"nao eh patrono do Harry Porter")
-- EXECUTION TIME:
0.144094
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Porter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 21:46:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	print("cervo eh patrono do Harry Porter")
else:
   print(patronum,"nao eh patrono do Harry Porter")
-- EXECUTION TIME:
0.197887
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Porter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:06:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	mensagem = patronum, "eh patrono do Harry Porter"
else:
   mensagem = patronum, "eh patrono do Harry Porter"
	
print(mensagem)
-- EXECUTION TIME:
0.257719
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
nome do patrono: ('cervo', 'eh patrono do Harry Porter')
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nome do patrono: ('bode', 'eh patrono do Harry Porter')
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:06:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	mensagem = patronum, "eh patrono do Harry Porter"
else:
   mensagem = patronum, "eh patrono do Harry Porter"
	
print(mensagem)
-- OUTPUT:
('cervo', 'eh patrono do Harry Porter')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:07:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	mensagem = (patronum, "eh patrono do Harry Porter")
else:
   mensagem = (patronum, "eh patrono do Harry Porter")
	
print(mensagem)
-- OUTPUT:
('cervo', 'eh patrono do Harry Porter')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:07:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	mensagem = ("cervo eh patrono do Harry Porter")
else:
   mensagem = (patronum "eh patrono do Harry Porter")
	
print(mensagem)
-- ERROR:
File "XXXX", line 9
    mensagem = (patronum "eh patrono do Harry Porter")
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:08:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	mensagem = ("cervo eh patrono do Harry Porter")
else:
   mensagem = (patronum, "eh patrono do Harry Porter")
	
print(mensagem)
-- EXECUTION TIME:
0.296938
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
('bode', 'eh patrono do Harry Porter')
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:08:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	mensagem = ("cervo eh patrono do Harry Porter")
else:
   mensagem = (patronum, "eh patrono do Harry Porter")
	
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:08:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	mensagem = ("cervo eh patrono do Harry Porter")
else:
   mensagem = (patronum,"eh patrono do Harry Porter")
	
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:08:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	mensagem = ("cervo eh patrono do Harry Porter")
else:
   mensagem = patronum, ("eh patrono do Harry Porter")
	
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:09:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	print("cervo eh patrono do Harry Porter")
else:
   print(patronum, "eh patrono do Harry Porter")
-- EXECUTION TIME:
0.179122
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode eh patrono do Harry Porter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:20:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	mensagem = "cervo eh patrono do Harry Porter"
else:
   mensagem = (patronum + "eh patrono do Harry Porter")
	
print = (mensagem)
-- EXECUTION TIME:
0.275697
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:

-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:21:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	mensagem = "cervo eh patrono do Harry Porter"
else:
   mensagem = (patronum + "eh patrono do Harry Porter")
	
print = (mensagem)
-- OUTPUT:
cervo eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:21:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	mensagem = "cervo eh patrono do Harry Porter"
else:
   mensagem = (patronum + "eh patrono do Harry Porter")
	
print = (mensagem)
-- OUTPUT:
cervo eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:21:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	mensagem = "cervo eh patrono do Harry Porter"
else:
   mensagem = (patronum + "nao eh patrono do Harry Porter")
	
print = (mensagem)
-- EXECUTION TIME:
0.258781
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:

-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:21:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	mensagem = "cervo eh patrono do Harry Porter"
else:
   mensagem = (patronum + "nao eh patrono do Harry Porter")
	
print = (mensagem)
-- EXECUTION TIME:
0.265064
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:

-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:22:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	mensagem = "cervo eh patrono do Harry Porter"
else:
   mensagem = (patronum + "nao eh patrono do Harry Porter")
	
print(mensagem)
-- EXECUTION TIME:
0.158867
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Porter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:22:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	mensagem = "cervo eh patrono do Harry Porter"
else:
   mensagem = (patronum + "nao eh patrono do Harry Porter")
	
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:22:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	mensagem = "cervo eh patrono do Harry Porter"
else:
   mensagem = (patronum + " nao eh patrono do Harry Porter")
	
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:22:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	mensagem = "cervo eh patrono do Harry Porter"
else:
   mensagem = (patronum + " nao eh patrono do Harry Porter")
	
print(mensagem)
-- EXECUTION TIME:
0.12964
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Porter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:23:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	mensagem = (patronum + " eh patrono do Harry Porter")
else:
   mensagem = (patronum + " nao eh patrono do Harry Porter")
	
print(mensagem)
-- EXECUTION TIME:
0.138289
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Porter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:23:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	mensagem = ("cervo eh patrono do Harry Porter")
else:
   mensagem = (patronum + " nao eh patrono do Harry Porter")
	
print(mensagem)
-- EXECUTION TIME:
0.224676
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Porter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:23:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	mensagem = ("cervo eh patrono do Harry Porter")
else:
   mensagem = (patronum + " nao eh patrono do Harry Porter")
	
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:24:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	mensagem = ("cervo eh patrono do Harry Porter")
else:
   mensagem = (patronum + " nao eh patrono do Harry Porter")
	
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:24:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patronum = input("nome do patrono: ")

if (patronum == "cervo"):
	mensagem = ("cervo eh patrono do Harry Porter")
else:
   mensagem = (patronum + " nao eh patrono do Harry Porter")
	
print(mensagem)
-- EXECUTION TIME:
0.135992
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Porter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:25:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input("nome do patrono: ")

if (patronum == "cervo"):
	mensagem = ("cervo eh patrono do Harry Porter")
else:
   mensagem = (entrada + " nao eh patrono do Harry Porter")
	
print(mensagem)
-- EXECUTION TIME:
0.249274
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/1053/main.py", line 6, in <module>
    if (patronum == "cervo"):
NameError: name 'patronum' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:25:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input("nome do patrono: ")

if (patronum == "cervo"):
	mensagem = ("cervo eh patrono do Harry Potter")
else:
   mensagem = (entrada + " nao eh patrono do Harry Potter")
	
print(mensagem)
-- EXECUTION TIME:
0.154373
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/1053/main.py", line 6, in <module>
    if (patronum == "cervo"):
NameError: name 'patronum' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:26:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input("nome do patronum: ")

if (patronum == "cervo"):
	mensagem = ("cervo eh patrono do Harry Potter")
else:
   mensagem = (entrada + " nao eh patrono do Harry Potter")
	
print(mensagem)
-- EXECUTION TIME:
0.146051
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/1053/main.py", line 6, in <module>
    if (patronum == "cervo"):
NameError: name 'patronum' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:27:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input("nome do patronum: ")

if (patronum == "cervo"):
	mensagem = ("cervo eh patrono do Harry Potter")
else:
   mensagem = (entrada +" nao eh patrono do Harry Potter")
	
print(mensagem)
-- EXECUTION TIME:
0.187424
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/1053/main.py", line 6, in <module>
    if (patronum == "cervo"):
NameError: name 'patronum' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:28:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input("nome do patronum: ")

if (patronum == "cervo"):
	msg = ("cervo eh patrono do Harry Potter")
else:
   msg = (entrada +" nao eh patrono do Harry Potter")
	
print(msg)
-- EXECUTION TIME:
0.133907
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/1053/main.py", line 6, in <module>
    if (patronum == "cervo"):
NameError: name 'patronum' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:28:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input("nome do patronum: ")
if (patronum == "cervo"):
	msg=("cervo eh patrono do Harry Potter")
else:
   msg=(entrada + " nao eh patrono do Harry Potter")
print(msg)
-- EXECUTION TIME:
0.178025
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/1053/main.py", line 5, in <module>
    if (patronum == "cervo"):
NameError: name 'patronum' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:28:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input("nome do patronum: ")
if (patronum == "cervo"):
	msg=("cervo eh patrono do Harry Potter")
else:
   msg=(entrada + " nao eh patrono do Harry Potter")
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (patronum == "cervo"):
NameError: name 'patronum' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:29:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input("nome do patronum: ")
if (entrada == "cervo"):
	msg=("cervo eh patrono do Harry Potter")
else:
   msg=(entrada + " nao eh patrono do Harry Potter")
print(msg)
-- EXECUTION TIME:
0.189703
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
